# meson-bug

./: README.md  meson.build
proto/bar/: bar.proto
